<project>
    <modelVersion>4.0.0</modelVersion>


    <groupId>net.nodebox</groupId>
    <artifactId>nodebox</artifactId>
    <version>3.0.44</version>
    <packaging>jar</packaging>

    <name>NodeBox</name>
    <description>NodeBox is a cross-platform, node-based GUI for efficient data visualizations and generative design.
    </description>
    <url>https://nodebox.net</url>

    <licenses>
        <license>
            <name>GPL license, Version 2.0</name>
            <url>https://www.gnu.org/licenses/old-licenses/lgpl-2.0.html</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>EMRG</name>
            <email>info@emrg.be</email>
            <organization>EMRG</organization>
            <organizationUrl>https://www.emrg.be/</organizationUrl>
        </developer>
    </developers>

    <scm>
        <url>https://github.com/nodebox/nodebox</url>
        <connection>scm:git:https://github.com/nodebox/nodebox.git</connection>
        <developerConnection>scm:git:git@github.com:nodebox/nodebox.git</developerConnection>
    </scm>

    <dependencies>

        <dependency>
            <groupId>org.clojure</groupId>
            <artifactId>clojure</artifactId>
            <version>1.12.4</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>33.5.0-jre</version>
        </dependency>

        <dependency>
            <groupId>org.apache.httpcomponents.client5</groupId>
            <artifactId>httpclient5</artifactId>
            <version>5.5.2</version>
        </dependency>

        <dependency>
            <groupId>com.itextpdf</groupId>
            <artifactId>itextpdf</artifactId>
            <version>5.5.13.4</version>
        </dependency>

        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
            <version>5.18.1</version>
        </dependency>

        <dependency>
            <groupId>com.jayway.jsonpath</groupId>
            <artifactId>json-path</artifactId>
            <version>2.10.0</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.python</groupId>
            <artifactId>jython-standalone</artifactId>
            <version>2.7.2</version>
        </dependency>

        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>5.12.0</version>
        </dependency>

        <dependency>
            <groupId>org.clojars.processing-core</groupId>
            <artifactId>org.processing.core</artifactId>
            <version>1.5.1</version>
        </dependency>

        <dependency>
            <groupId>ddf.minim</groupId>
            <artifactId>ddf.minim</artifactId>
            <version>2.2.0</version>
        </dependency>

        <dependency>
            <groupId>de.sojamo</groupId>
            <artifactId>oscp5</artifactId>
            <version>0.9.8</version>
        </dependency>

    </dependencies>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2/</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        
        <repository>
            <id>clojars.org</id>
            <url>https://clojars.org/repo</url>
        </repository>
    </repositories>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

</project>
